@@ -1,3 +1,4 @@
+* Add partial TO_CHAR support for date and datetime on SQLite
 * Setup default logging for WSGI app
 * Add format argument to report format_date function
 * Change expand attribute into a factor
